--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@styles/satoshi.css";
+import "@styles/daisyui.css";
 
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
@@ -8,7 +9,7 @@ const { title = "Shop.Co" } = Astro.props as MainLayoutProps;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
