--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,37 +10,41 @@ import { Image } from "astro:assets";
   class="mx-auto my-6 max-w-screen-xl w-full inline-flex gap-x-10 items-center px-5"
 >
   <Image
-    src="/logo.svg"
     alt="Shop.co logo"
     class="h-5 w-auto"
-    width={22}
+    loading="eager"
+    src="/logo.svg"
     height={32}
+    width={22}
   />
   <ul class="inline-flex gap-x-6 items-center text-center">
     <li>
       <div class="dropdown dropdown-hover">
-        <button class="inline-flex gap-x-1 items-center" tabindex="0" type="button">Shop <ArrowDownIcon /></button>
+        <button
+          class="inline-flex gap-x-1 items-center"
+          tabindex="0"
+          type="button">Shop <ArrowDownIcon /></button
+        >
         <ul
           class="dropdown-content menu bg-base-100 z-[1] w-auto min-w-20 p-2 shadow"
-          tabindex="0"
         >
-          <li><a class="text-nowrap" href="#">Item 1</a></li>
-          <li><a class="text-nowrap" href="#">Item 2</a></li>
+          <li><a aria-label="Ir a Item 1" class="text-nowrap" href="/">Item 1</a></li>
+          <li><a aria-label="Ir a Item 2" class="text-nowrap" href="/">Item 2</a></li>
         </ul>
       </div>
     </li>
-    <li><a href="#">On Sale</a></li>
-    <li><a href="#">New Arrivals</a></li>
-    <li><a href="#">Brands</a></li>
+    <li><a href="/">On Sale</a></li>
+    <li><a href="/">New Arrivals</a></li>
+    <li><a href="/">Brands</a></li>
   </ul>
   <search class="grow inline-flex gap-x-3 bg-[#F0F0F0] rounded-full px-4 py-3">
     <SearchIcon className="text-[#00000050]" />
     <input
       class="bg-transparent focus:outline-none w-full"
-      type="text"
+      placeholder="Search for products..."
       name="searchbox"
       role="searchbox"
-      placeholder="Search for products..."
+      type="text"
     />
   </search>
   <div class="inline-flex gap-x-[14px]">
