--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,40 +4,55 @@ import CartIcon from "@icons/Cart.astro";
 import SearchIcon from "@icons/Search.astro";
 import UserIcon from "@icons/User.astro";
 import { Image } from "astro:assets";
+import MobileNav from "./MobileNav.astro";
 ---
 
 <header
-  class="mx-auto my-6 max-w-screen-xl w-full inline-flex gap-x-10 items-center px-5"
+  class="mx-auto my-6 max-w-screen-xl w-full inline-flex gap-x-10 items-center max-md:justify-between px-5 relative"
 >
+  <!-- MOBILE MENU -->
+  
+  <MobileNav />
+  <!-- MOBILE MENU END -->
   <Image
-    alt="Shop.co logo"
     class="h-5 w-auto"
+    alt="Shop.co logo"
     loading="eager"
     src="/logo.svg"
-    height={32}
-    width={22}
+    height={20}
+    width={127}
   />
-  <ul class="inline-flex gap-x-6 items-center text-center">
-    <li>
-      <div class="dropdown dropdown-hover">
-        <button
-          class="inline-flex gap-x-1 items-center"
-          tabindex="0"
-          type="button">Shop <ArrowDownIcon /></button
-        >
-        <ul
-          class="dropdown-content menu bg-base-100 z-[1] w-auto min-w-20 p-2 shadow"
-        >
-          <li><a aria-label="Ir a Item 1" class="text-nowrap" href="/">Item 1</a></li>
-          <li><a aria-label="Ir a Item 2" class="text-nowrap" href="/">Item 2</a></li>
-        </ul>
-      </div>
-    </li>
-    <li><a href="/">On Sale</a></li>
-    <li><a href="/">New Arrivals</a></li>
-    <li><a href="/">Brands</a></li>
-  </ul>
-  <search class="grow inline-flex gap-x-3 bg-[#F0F0F0] rounded-full px-4 py-3">
+  <nav class="max-md:hidden">
+    <ul class="inline-flex gap-x-6 items-center text-center">
+      <li>
+        <div class="dropdown dropdown-hover">
+          <button
+            class="inline-flex gap-x-1 items-center"
+            tabindex="0"
+            type="button">Shop <ArrowDownIcon /></button
+          >
+          <ul
+            class="dropdown-content menu bg-base-100 z-[1] w-auto min-w-20 p-2 shadow"
+          >
+            <li>
+              <a aria-label="Ir a Item 1" class="text-nowrap" href="/">Item 1</a
+              >
+            </li>
+            <li>
+              <a aria-label="Ir a Item 2" class="text-nowrap" href="/">Item 2</a
+              >
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li><a href="/">On Sale</a></li>
+      <li><a href="/">New Arrivals</a></li>
+      <li><a href="/">Brands</a></li>
+    </ul>
+  </nav>
+  <search
+    class="grow inline-flex gap-x-3 bg-[#F0F0F0] rounded-full px-4 py-3 max-md:hidden"
+  >
     <SearchIcon className="text-[#00000050]" />
     <input
       class="bg-transparent focus:outline-none w-full"
@@ -47,12 +62,15 @@ import { Image } from "astro:assets";
       type="text"
     />
   </search>
-  <div class="inline-flex gap-x-[14px]">
+  <nav class="inline-flex gap-x-[14px]">
+    <button class="md:hidden" type="button">
+      <SearchIcon />
+    </button>
     <button type="button">
       <CartIcon />
     </button>
     <button type="button">
       <UserIcon />
     </button>
-  </div>
+  </nav>
 </header>
