--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,15 +4,14 @@ import CartIcon from "@icons/Cart.astro";
 import SearchIcon from "@icons/Search.astro";
 import UserIcon from "@icons/User.astro";
 import { Image } from "astro:assets";
-import MobileNav from "./MobileNav.astro";
+import MobileNav from "@components/react-components/MobileNav";
 ---
 
 <header
   class="mx-auto my-6 max-w-screen-xl w-full inline-flex gap-x-10 items-center max-md:justify-between px-5 relative"
 >
   <!-- MOBILE MENU -->
-  
-  <MobileNav />
+  <MobileNav client:media="(max-width: 768px)" />
   <!-- MOBILE MENU END -->
   <Image
     class="h-5 w-auto"
