--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,13 +12,13 @@ import GooglePayIcon from "@icons/GooglePay.astro";
 import Mail from "@icons/Mail.astro";
 ---
 
-<footer class="bg-primary mt-[90px]">
+<footer class="bg-primary mt-[90px] max-md:mt-[20%] max-sm:mt-[min(31%,135px)]">
   <div class="mx-auto mt-36 mb-20 max-w-screen-xl w-full px-5 relative">
     <div
-      class="absolute left-1/2 transform -translate-x-1/2 -translate-y-[130%] bg-black py-9 px-16 flex items-center justify-between gap-7 rounded-3xl w-[calc(100%-2rem)]"
+      class="absolute left-1/2 transform -translate-x-1/2 -translate-y-[130%] max-md:-translate-y-[110%] bg-black py-9 px-16 max-md:py-6 max-md:px-8 flex max-md:flex-col items-center justify-between gap-8 rounded-3xl w-[calc(100%-2rem)]"
     >
       <h4
-        class="text-white text-[2.5rem] leading-10 max-w-xl w-full font-integral font-extrabold line-clamp-2"
+        class="text-white text-clamp leading-clamp max-w-xl w-full font-integral font-extrabold md:line-clamp-2"
       >
         STAY UPTO DATE ABOUT OUR LATEST OFFERS
       </h4>
@@ -28,7 +28,7 @@ import Mail from "@icons/Mail.astro";
         >
           <Mail className="text-[#00000080]" />
           <input
-            class="focus:outline-none bg-transparent text-black"
+            class="focus:outline-none bg-transparent text-black grow"
             placeholder="Enter your email address"
             name="suscribe"
             type="text"
@@ -157,7 +157,7 @@ import Mail from "@icons/Mail.astro";
 
     <hr class="my-5 border-black border-opacity-10" />
 
-    <footer class="inline-flex justify-between items-center w-full">
+    <footer class="flex max-md:flex-col gap-4 justify-between items-center w-full">
       <span>Shop.co © 2000-2025, All Rights Reserved</span>
       <div aria-label="payments-methods" class="inline-flex gap-3">
         <span
