--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
+import Hero from "@components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
+import Brands from "@components/Brands.astro";
 ---
 
 <Layout title="Home">
-  <div class="text-primary h-screen">content</div>
+  <Hero />
+  <Brands />
 </Layout>
