--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import Starlight from "@icons/Starlight.astro";
   aria-labelledby="hero"
   class="bg-[#F2F0F1] w-full flex max-md:flex-col md:justify-around gap-16"
 >
-  <div class="flex flex-col gap-8 max-md:gap-5 md:p-[clamp(1.25rem,2.1786rem+-1.9345vw,0.4375rem)] max-md:px-4 max-md:py-10 max-md:pb-0 max-md:max-h-[1200px] md:max-w-[50%]">
+  <div class="flex flex-col gap-8 max-md:gap-5 md:pt-11 md:p-[clamp(1.25rem,2.1786rem+-1.9345vw,0.4375rem)] max-md:px-4 max-md:py-10 max-md:pb-0 max-md:max-h-[1200px] md:max-w-[50%]">
     <h1 class="font-integral font-extrabold text-black md:text-[clamp(2.5rem,0.2143rem+4.7619vw,4.5rem)] md:leading-[clamp(2.5rem,0.2143rem+4.7619vw,4.5rem)] max-md:text-4xl">
       FIND CLOTHES THAT MATCHES YOUR STYLE
     </h1>
