--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,5 +38,6 @@ const { title = "Shop.Co" } = Astro.props as MainLayoutProps;
   body {
     display: grid;
     grid-template-rows: auto 1fr auto;
+    overflow-x: hidden;
   }
 </style>
