--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Hero from "@components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 import Brands from "@components/Brands.astro";
+import Products from "@components/Products.astro";
 ---
 
 <Layout title="Home">
   <Hero />
   <Brands />
+  <Products />
 </Layout>
