--- a/src/styles/satoshi.css
+++ b/src/styles/satoshi.css
@@ -22,7 +22,7 @@
 *
 */
 @font-face {
-  font-family: 'Satoshi-Light';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Light.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Light.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Light.ttf') format('truetype');
@@ -31,7 +31,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi-LightItalic';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-LightItalic.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-LightItalic.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-LightItalic.ttf') format('truetype');
@@ -40,7 +40,7 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'Satoshi-Regular';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Regular.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Regular.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Regular.ttf') format('truetype');
@@ -49,7 +49,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi-Italic';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Italic.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Italic.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Italic.ttf') format('truetype');
@@ -58,7 +58,7 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'Satoshi-Medium';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Medium.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Medium.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Medium.ttf') format('truetype');
@@ -67,7 +67,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi-MediumItalic';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-MediumItalic.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-MediumItalic.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-MediumItalic.ttf') format('truetype');
@@ -76,7 +76,7 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'Satoshi-Bold';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Bold.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Bold.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Bold.ttf') format('truetype');
@@ -85,7 +85,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi-BoldItalic';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-BoldItalic.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-BoldItalic.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-BoldItalic.ttf') format('truetype');
@@ -94,7 +94,7 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'Satoshi-Black';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-Black.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-Black.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-Black.ttf') format('truetype');
@@ -103,7 +103,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi-BlackItalic';
+  font-family: 'Satoshi';
   src: url('/fonts/Satoshi/Satoshi-BlackItalic.woff2') format('woff2'),
        url('/fonts/Satoshi/Satoshi-BlackItalic.woff') format('woff'),
        url('/fonts/Satoshi/Satoshi-BlackItalic.ttf') format('truetype');
