--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -6,7 +6,7 @@ import VersageLogo from "@icons/VersageLogo.astro";
 import ZaraLogo from "@icons/ZaraLogo.astro";
 ---
 
-<section aria-labelledby="brands-heading" class="py-11 px-4 bg-black w-full inline-flex flex-wrap gap-8 items-center justify-around">
+<section aria-label="brands-heading" class="py-11 px-4 bg-black w-full inline-flex flex-wrap gap-8 items-center justify-around">
   <VersageLogo className="max-w-40 max-md:max-w-28" />
   <ZaraLogo className="max-w-[5.7rem] max-md:max-w-16" />
   <GucciLogo className="max-w-[9.7rem] max-md:max-w-[6.84rem]" />
