--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -159,7 +159,7 @@ import Mail from "@icons/Mail.astro";
 
     <footer class="flex max-md:flex-col gap-4 justify-between items-center w-full">
       <span>Shop.co © 2000-2025, All Rights Reserved</span>
-      <div aria-label="payments-methods" class="inline-flex gap-3">
+      <section aria-label="payments-methods" class="inline-flex gap-3">
         <span
           class="flex justify-center items-center rounded-md w-[46px] h-[30px] bg-white border border-[#D6DCE5]"
         >
@@ -185,7 +185,7 @@ import Mail from "@icons/Mail.astro";
         >
           <GooglePayIcon />
         </span>
-      </div>
+      </section>
     </footer>
   </div>
 </footer>
