--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -155,7 +155,7 @@ const topSellings = [
   <!-- Buscar por estilo de vestimenta -->
   <section
     aria-labelledby="browse-by-dress-style"
-    class="bg-[#F0F0F0] mt-4 mb-6 rounded-[40px] px-16 pt-[70px] pb-[76px] max-md:px-6 max-md:py-10"
+    class="bg-[#F0F0F0] mt-4 rounded-[40px] px-16 pt-[70px] pb-[76px] max-md:px-6 max-md:py-10"
   >
     <header>
       <h3
