--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Hero from "@components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 import Brands from "@components/Brands.astro";
 import Products from "@components/Products.astro";
+import CardReviews from "@components/Reviews/Reviews.astro";
 ---
 
 <Layout title="Home">
   <Hero />
   <Brands />
   <Products />
+  <CardReviews />
 </Layout>
