--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import ArrowDownIcon from "../assets/chevron-down.svg?raw";
+import ArrowDownIcon from "@assets/chevron-down.svg?raw";
 import CartIcon from "@icons/Cart.astro";
 import SearchIcon from "@icons/Search.astro";
 import UserIcon from "@icons/User.astro";
