--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -84,7 +84,7 @@ const topSellings = [
         NEW ARRIVALS
       </h2>
     </header>
-    <div class="overflow-x-auto max-md:w-[calc(100vw-16px)] pb-2">
+    <div class="overflow-x-auto pb-2">
       <ul class="flex gap-5 justify-evenly mt-14 min-w-[1075px]">
         {
           newArrivals.map((product) => (
@@ -124,7 +124,7 @@ const topSellings = [
         TOP SELLING
       </h2>
     </header>
-    <div class="overflow-x-auto max-md:w-[calc(100vw-16px)] pb-2">
+    <div class="overflow-x-auto pb-2">
       <ul class="flex gap-5 justify-evenly mt-14 min-w-[1075px]">
         {
           topSellings.map((product) => (
