--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,7 +45,7 @@ import Mail from "@icons/Mail.astro";
         <Image
           class="w-auto max-w-40 h-6"
           alt="Shop.co logo"
-          loading="eager"
+          loading="lazy"
           src="/logo.svg"
           width={167}
           height={23}
