--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -174,7 +174,7 @@ const topSellings = [
               class="w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
               src="/imgs/casual-style.webp"
               alt="Casual Style"
-              loading="eager"
+              loading="lazy"
               height={289}
               width={407}
             />
@@ -186,14 +186,14 @@ const topSellings = [
         <a
           aria-label="View formal style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end"
-          href=""
+          href="/"
         >
           <figure>
             <Image
               class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
               src="/imgs/formal-style.webp"
               alt="Formal Style"
-              loading="eager"
+              loading="lazy"
               height={289}
               width={407}
             />
@@ -207,14 +207,14 @@ const topSellings = [
         <a
           aria-label="View party style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end"
-          href=""
+          href="/"
         >
           <figure>
             <Image
               class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
               src="/imgs/party-style.webp"
               alt="Party Style"
-              loading="eager"
+              loading="lazy"
               height={289}
               width={407}
             />
@@ -223,13 +223,13 @@ const topSellings = [
             </figcaption>
           </figure>
         </a>
-        <a aria-label="View gym style products" class="relative" href="">
+        <a aria-label="View gym style products" class="relative" href="/">
           <figure>
             <Image
               class="nav:w-[407px] w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
               src="/imgs/gym-style.webp"
               alt="Gym Style"
-              loading="eager"
+              loading="lazy"
               height={289}
               width={407}
             />
