Gucci animation xd

--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -168,10 +168,10 @@ const topSellings = [
 
     <div class="mt-16 flex flex-col gap-5">
       <div class="flex max-nav:flex-col justify-center gap-5 w-full">
-        <a aria-label="View casual style products" class="relative" href="/">
+        <a aria-label="View casual style products" class="relative rounded-3xl group overflow-hidden" href="/">
           <figure>
             <Image
-              class="w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
+              class="w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
               src="/imgs/casual-style.webp"
               alt="Casual Style"
               loading="lazy"
@@ -185,12 +185,12 @@ const topSellings = [
         </a>
         <a
           aria-label="View formal style products"
-          class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end"
+          class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end group overflow-hidden"
           href="/"
         >
           <figure>
             <Image
-              class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
+              class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
               src="/imgs/formal-style.webp"
               alt="Formal Style"
               loading="lazy"
@@ -206,12 +206,12 @@ const topSellings = [
       <div class="flex max-nav:flex-col justify-center gap-5 w-full">
         <a
           aria-label="View party style products"
-          class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end"
+          class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end overflow-hidden group"
           href="/"
         >
           <figure>
             <Image
-              class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
+              class="w-auto md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
               src="/imgs/party-style.webp"
               alt="Party Style"
               loading="lazy"
@@ -223,10 +223,10 @@ const topSellings = [
             </figcaption>
           </figure>
         </a>
-        <a aria-label="View gym style products" class="relative" href="/">
+        <a aria-label="View gym style products" class="relative rounded-3xl overflow-hidden group" href="/">
           <figure>
             <Image
-              class="nav:w-[407px] w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl"
+              class="nav:w-[407px] w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
               src="/imgs/gym-style.webp"
               alt="Gym Style"
               loading="lazy"
