--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Layout from "../layouts/Layout.astro";
 import Brands from "@components/Brands.astro";
 import Products from "@components/Products.astro";
 import CardReviews from "@components/Reviews/Reviews.astro";
+
+export const prerender = true
 ---
 
 <Layout title="Home">
