--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -97,6 +97,7 @@ const topSellings = [
                 title={product.title}
                 price={product.price}
                 id={product.id}
+                loading="eager"
               />
             </li>
           ))
