--- a/src/components/SizeSelector.astro
+++ b/src/components/SizeSelector.astro
@@ -9,8 +9,8 @@ const { id, name, content } = Astro.props as ColorSelectorProps;
 ---
 
 <label
-  for="color"
   class="relative bg-[#F0F0F0] py-3 px-5 rounded-full text-sm overflow-hidden transition-colors"
+  for={id}
 >
   <input
     class="absolute z-20 w-full h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 opacity-0 cursor-pointer"
@@ -19,6 +19,7 @@ const { id, name, content } = Astro.props as ColorSelectorProps;
     id={id}
   />
   <span>{content}</span>
+  <span class="sr-only">Select size {name}</span>
 </label>
 
 <style>
