--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -24,46 +24,77 @@ export const prerender = false;
   className="grid grid-cols-[0.5fr_1fr_1fr] grid-rows-[auto_1fr_1fr_1fr_auto] gap-x-5 gap-y-6 px-24 pb-20"
 >
   <!-- BREADCRUMB -->
-  <div class="col-span-3 breadcrumbs text-sm py-0">
-    <ul class="text-primary">
-      <li><a aria-label="Go to Home" href="/">Home</a></li>
-      <li class="text-black">Shop</li>
-    </ul>
-  </div>
+  <nav aria-label="breadcrumb" class="col-span-3 breadcrumbs text-sm py-0">
+    <ol
+      aria-label="breadcrumb"
+      itemtype="https://schema.org/BreadcrumbList"
+      class="text-primary"
+      itemscope
+    >
+      <li
+        itemprop="itemListElement"
+        itemtype="https://schema.org/ListItem"
+        itemscope
+      >
+        <a aria-label="Go to Home" href="/">Home</a>
+      </li>
+      <li
+        itemprop="itemListElement"
+        itemtype="https://schema.org/ListItem"
+        aria-current="page"
+        class="text-black"
+        itemscope
+      >
+        Shop
+      </li>
+    </ol>
+  </nav>
 
   <!-- ASIDE -->
   <Filters />
 
   <!-- PRODUCTS CONTENT -->
-  <section class="col-span-2 row-span-3 row-start-2">
-    {/* HEADER */}
-    <div class="flex justify-between items-end">
+  <section aria-label="main" class="col-span-2 row-span-3 row-start-2">
+    <!-- HEADER -->
+    <header aria-label="header" class="flex justify-between items-end">
       <h3 class="font-bold text-2xl">Casual</h3>
       <div class="inline-flex gap-x-3 text-primary">
-        <p id="products__info">
+        <p aria-label="show count of products" id="products__info">
           Showing {currentPage}-{rest.totalPages} of {total} Products
         </p>
-        <div class="">
+        <div aria-label="sort products">
           <label for="sort">Sort by:</label>
           <select
             id="sort"
             name="sort"
             class="bg-transparent font-medium text-black text-center"
+            aria-label="Sort products"
           >
             <option value="newest">Newest</option>
             <option value="price" selected>Most Popular</option>
           </select>
         </div>
       </div>
-    </div>
+    </header>
+
+    <!-- CONTENEDOR DE LOS PRODUCTOS -->
     <div
       id="products__container"
       class="grid gap-5 grid-cols-[repeat(auto-fit,minmax(295px,1fr))]"
+      aria-labelledby="products__info"
+      role="region"
     >
+      <!-- LOADER -->
       <span
         id="products__loader"
-        class="mx-auto loading loading-infinity loading-lg hidden"></span>
-      {/* PRODUCT CARDS */}
+        class="mx-auto loading loading-infinity loading-lg hidden"
+        aria-label="Loading products"
+        aria-live="polite"
+        role="status"
+      >
+      </span>
+
+      <!-- LISTA DE PRODUCTOS -->
       <Fragment set:html={html} />
     </div>
   </section>
@@ -94,7 +125,7 @@ export const prerender = false;
       </button>
 
       {/* Botones de Páginas */}
-      <div id="paginator__container" class="join mx-auto">
+      <nav id="paginator__container" aria-label="page paginator" class="join mx-auto">
         {
           pages.map((page, index) =>
             typeof page === "number" ? (
@@ -107,15 +138,15 @@ export const prerender = false;
             ) : (
               <button
                 class="join-item btn btn-disabled cursor-default"
-                disabled
                 aria-label="Páginas omitidas"
+                disabled
               >
                 ...
               </button>
             )
           )
         }
-      </div>
+      </nav>
 
       {/* Botón Siguiente */}
       <button
@@ -185,9 +216,7 @@ export const prerender = false;
     fetchProducts(currentPage, true);
   });
 
-
   // ===================== FUNCIONES ===================== //
-
 
   type IsLoadingProps = {
     isLoading?: boolean;
